--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ pytorch_lightning==1.3.8
 pandas==1.3.0
 albumentations==1.0.1
 wandb==0.10.30
-torch==1.9.0
+torch-1.9.0-cp38-cp38-linux_aarch64.whl
 PyYAML==5.4.1
 torchtext==0.10.0
